# GirlfriendGPT

./: .gitignore  cli.py  pyproject.toml  requirements.txt  setup.cfg
app/: README.md  docker-compose.yml
app/agent/: .env.example  Dockerfile  Dockerfile.talk  README.md  agent_paths.py  agent_persona.py  agent_runtime.py  config.py  docker-compose.yml  livekit.yaml  pyproject.toml  tool_catalog.py  voice_agent.py
app/agent/personas/: Lena Van Der Meer.json
app/agent/talk/: __init__.py  server.py
app/agent/talk/static/: index.html
app/agent/tests/: test_in_package_personas.py  test_job_accept_identity.py  test_participant_id.py  test_patient_link.py  test_talk_connect.py  test_turn_handling.py  test_worker_name_persona.py
app/agent/tools/: empathy.json  report_adherence_intent.json
app/backend/: .env.example  Dockerfile  README.md  __init__.py  _llm.py  _minio_store.py  _postgres_index.py  _real_channels.py  _real_scraper.py  _redis_bus.py  bus.py  channels.py  codegen.py  companions.py  dispatcher.py  envelope.py  factory.py  livekit_token.py  main.py  patterns.py  pyproject.toml  reflection.py  registry.py  runner.py  runtime.py  store.py  tools.py  trace.py  voice_sessions.py  workflow.py
app/backend/static/: index.html
app/backend/tests/: _runner.py  test_bus.py  test_companions.py  test_dispatcher.py  test_envelope.py  test_livekit_token.py  test_reflection_channels.py  test_runner_codegen.py  test_trace.py  test_voice_sessions.py  test_workflow.py
app/streamlit/: Companion.py  README.md  pyproject.toml
app/streamlit/pages/: 2_Manage.py  3_Share.py
app/streamlit/utils/: data.py  ux.py
docs/: ALI_CHANNELS.md  (+9 more)
(+166 files in other folders)
