[project]
name = "girlfriendgpt-backend"
version = "0.1.0"
description = "GirlfriendGPT backend — LiveKit token API for the talk frontend"
requires-python = ">=3.11"
dependencies = [
  "livekit-api>=1.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
