[project]
name = "girlfriendgpt-streamlit"
version = "0.1.0"
description = "Optional Streamlit companion UI — isolated from the default Vite UW-Crushes stack"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.30.0,<2.0.0",
  "requests>=2.31.0,<3.0.0",
  "websockets>=12.0,<13.0",
  "pandas>=2.0.0",
  "pytube>=15.0.0",
  "scrapetube>=2.5.0",
]

[tool.uv]
package = false
